--- a/app/src/main/res/layout/topic_jingxuan.xml
+++ b/app/src/main/res/layout/topic_jingxuan.xml
@@ -6,6 +6,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:id="@+id/jingxuanpic"
+        android:background="#ccc"
+        android:scaleType="centerCrop"
         android:layout_height="150dp" />
     <!--jingxuanpic,jingxuantitle,jingxuansubtitle-->
     <LinearLayout
