--- a/app/src/main/res/layout/head1.xml
+++ b/app/src/main/res/layout/head1.xml
@@ -6,6 +6,8 @@
 
     <LinearLayout
         android:id="@+id/jinr"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
